tests/errors/surf_lex_07.ki
# LEXER: an unknown backslash escape (\q is not a recognized escape)
var s = "say \quack now"